--------------------
  - Fix broken set_url_var function in functions/html.php (#1729814).
  - Fix config.pl not detecting auth support correctly (#1727033).
  - Fix display of X-Priority in message view.
  - Work around mailers sending broken Date headers with no space after the
    first comma.
  - Let POP3 class properly cope with lines starting with a '.'.
  - Some HTML validation cleanups.

Version 1.4.10a - 10 May 2007
-----------------------------
  - Fix regression in compose: when no alternative identities have been
    defined, the From header would be incorrect. 

Version 1.4.10 - 9 May 2007
---------------------------
  - Drop obsolete ORDB RBL from filters plugin (#1629398).
  - Fix HTML glitches (#1608798, #1628639, #1521389, #1548394, #1704686).
  - Reduce (largely theoretical) chance of reusing existing attachment
    filenames.
  - Fix rare bug in forwarding as attachment from some search results.
  - Add warning about magic_quotes_* in configtest.
  - Unify accepted versions for imap_server_type and set_defaults (#1629722).
  - Fix for wrong $_SERVER['REQUEST_URI'] value causing wrong links
    in the [more] and [less] links in read_body.php.
  - Update for switch from CVS to Subversion.
  - Fix URL to send read receipts from read_body (#1637572).
  - Fix for high memory usage when forwarding messages with attachments.
  - Fix for filename extraction from attachments.
  - Fix reply to all duplicating the address from Reply-To.
  - Drop redundant call to session_register, which could trigger a segfault
    in PHP 4.4.5 (#1664155).
  - Make compose use get_identities() rather than fiddling with identities
    by itself, resolving a problem in the listcommands plugin (#1663762).
  - If a date-header cannot be parsed, display the unparsed version as a
    better-than-nothing alternative.
  - Fix "Unknown Sender" on message after reading a digest (#1673047).
  - Fix Priority and Receipt compose options being reset after return from